@@ -12,7 +12,7 @@
   of a package.
 }
 \usage{
-buildVignettes(package, dir, lib.loc = NULL, quiet = TRUE)
+buildVignettes(package, dir, lib.loc = NULL, quiet = TRUE, clean = TRUE)
 pkgVignettes(package, dir, lib.loc = NULL)
 }
 \arguments{
@@ -27,6 +27,8 @@ pkgVignettes(package, dir, lib.loc = NULL)
     search for \code{package}.}
   \item{quiet}{logical. Run \code{\link[utils]{Sweave}} and
     \code{\link{texi2dvi}} in quiet mode.}
+  \item{clean}{Remove all files generated by the build, even if there
+    were copies there before.}
 }
 \value{
   \code{buildVignettes} is called for its side effect of creating the
